--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ install:
   - sudo apt-get -y install g++-multilib gcc-multilib lib32ncurses5-dev lib32readline-gplv2-dev lib32z1-dev phablet-tools
 
 before_script:
+  - git config --global user.name "jianminglok"
+  - git config --global user.email "jianminglok@hotmail.com"
   - repo init -u https://github.com/CyanogenMod/android.git -b cm-12.1
   - repo sync
   - git clone https://github.com/jianminglok/android_device_xiaomi_hermes.git -b cm-12.1 device/xiaomi/hermes
