--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,7 @@ before_script:
   - git config --global user.name "jianminglok"
   - git config --global user.email "jianminglok@hotmail.com"
   - git config --global color.ui true
-  - repo init -u https://github.com/CyanogenMod/android.git -b cm-12.1
-  - repo sync
-  - git clone https://github.com/jianminglok/android_device_xiaomi_hermes.git -b cm-12.1 device/xiaomi/hermes
-  - git clone https://github.com/jianminglok/android_device_xiaomi_mt6795-common.git -b cm-12.1 device/xiaomi/mt6795-common
-  - git clone https://github.com/jianminglok/android_vendor_xiaomi_hermes.git -b cm-12.1 vendor/xiaomi/hermes
+  - ./build.sh
 
 script:
   - source build/envsetup.sh
