--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ dist: trusty
 language: generic
 
 install:
-  - sudo apt-get update
+  - sudo apt-get update -qq -o=Dpkg::Use-Pty=0
   - sudo apt-get -y install -qq -o=Dpkg::Use-Pty=0 bison build-essential curl flex git gnupg gperf libesd0-dev liblz4-tool libncurses5-dev libsdl1.2-dev libwxgtk2.8-dev libxml2 libxml2-utils lzop maven openjdk-7-jdk pngcrush schedtool squashfs-tools xsltproc zip zlib1g-dev
   - sudo apt-get -y install -qq -o=Dpkg::Use-Pty=0 g++-multilib gcc-multilib lib32ncurses5-dev lib32readline-gplv2-dev lib32z1-dev phablet-tools
 
