--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ language: generic
 
 install:
   - sudo apt-get update -qq -o=Dpkg::Use-Pty=0
-  - sudo apt-get -y install -qq -o=Dpkg::Use-Pty=0 bison build-essential curl flex git gnupg gperf libesd0-dev liblz4-tool libncurses5-dev libsdl1.2-dev libwxgtk2.8-dev libxml2 libxml2-utils lzop maven openjdk-7-jdk pngcrush schedtool squashfs-tools xsltproc zip zlib1g-dev
-  - sudo apt-get -y install -qq -o=Dpkg::Use-Pty=0 g++-multilib gcc-multilib lib32ncurses5-dev lib32readline-gplv2-dev lib32z1-dev phablet-tools
+  - sudo apt-get -y install -qq -o=Dpkg::Use-Pty=0 bison build-essential curl ccache flex lib32ncurses5-dev lib32z1-dev libesd0-dev libncurses5-dev libsdl1.2-dev libxml2 libxml2-utils lzop pngcrush schedtool squashfs-tools xsltproc zip zlib1g-dev git-core make phablet-tools gperf openjdk-8-jdk
 
 before_script:
   - git config --global user.name "jianminglok"
@@ -16,5 +15,5 @@ before_script:
 
 script:
   - source build/envsetup.sh
-  - breakfast hermes
+  - breakfast kenzo
   - make bacon
