--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: generic
 
 install:
   - sudo apt-get install -qq -o=Dpkg::Use-Pty=0 python-software-properties
-  - sudo add-apt-repository ppa:webupd8team/java -y
+  - sudo add-apt-repository ppa:openjdk-r/ppa  -y
   - sudo apt-get update -qq -o=Dpkg::Use-Pty=0
   - sudo apt-get -y install -qq -o=Dpkg::Use-Pty=0 bison build-essential curl ccache flex lib32ncurses5-dev lib32z1-dev libesd0-dev libncurses5-dev libsdl1.2-dev libxml2 libxml2-utils lzop pngcrush schedtool squashfs-tools xsltproc zip zlib1g-dev git-core make phablet-tools gperf openjdk-8-jdk
 
